# PlantCLEF2026

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.mlflow  GEMINI.md  Makefile  README.md  pyproject.toml
.specify/integrations/: speckit.manifest.json
.specify/memory/: constitution.md
experimentsDistill/: distill.py  lossDistill.py
notebooks/: 001-dann-training.ipynb  baseline.ipynb  baseline_dann.ipynb  compression_baseline.ipynb  official-notebook-tiling-inference.ipynb
scripts/: generate_val_split.py
specs/001-unsupervised-domain-adaptation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-unsupervised-domain-adaptation/checklists/: requirements.md
specs/001-unsupervised-domain-adaptation/contracts/: env.schema.md  mlflow.metrics.md
src/config/: __init__.py  compression.py
src/data/: __init__.py  compression.py  datasets.py  metadata.py
src/models/: __init__.py  compression.py  dann.py
src/utils/: metrics.py
tests/: conftest.py
tests/integration/: test_training.py
tests/unit/: test_compression_codec.py  test_compression_config.py  test_compression_preprocess.py  test_dann.py  test_datasets.py
