[project]
name = "plant-clef-2026"
version = "0.1.0"
description = "PlantCLEF 2026 Baseline & MLflow pipeline"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "boto3>=1.42.61",
    "catboost>=1.2.10",
    "datasets>=4.7.0",
    "ipykernel>=7.2.0",
    "kagglehub>=1.0.0",
    "kornia>=0.8.2",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.0",
    "mlflow[mcp]==3.9.0",
    "numpy>=1.26.4,<2",
    "optuna>=4.7.0",
    "pandas>=2.3.3",
    "papermill>=2.7.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "setuptools>=69.0.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "xgboost>=3.2.0",
    "kaggle>=1.6.14",
    "timm>=1.0.12",
]

[project.scripts]
generate-val = "scripts.generate_val_split:main"

[tool.setuptools.packages.find]
where = ["src"]

